--- a/src/pages/politicas-privacidad.astro
+++ b/src/pages/politicas-privacidad.astro
@@ -3,10 +3,9 @@ import Layout from "../layouts/Layout.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout
-	title="Políticas de Privacidad"
-	description="Políticas de privacidad de SCA Consultoría Ambiental e Ingeniería"
->
+<Layout title="Políticas de Privacidad" description="Políticas de privacidad de SCA Consultoría Ambiental e Ingeniería">
 	<!-- Aquí puedes seguir añadiendo componentes como Servicios, Contacto, etc. -->
+	<div class="minBox"></div>
+
 	<Footer />
 </Layout>
