correccion, carpeta mayusculas

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import { Picture } from 'astro:assets';
 import FadeInOnScroll from '../components/fx/FadeInOnScroll.svelte';
 import Video from '../components/Video/Video.astro';
-import Slider from "../components/Slider/Slider.astro";
+import Slider from '../components/Slider/Slider.astro';
 
 import arbusto from '/src/assets/img/arbusto.webp';
 import slImg1 from '/src/assets/img/sliders/slide1.webp';
