--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from 'astro:assets';
 import FadeInOnScroll from '../components/fx/FadeInOnScroll.svelte';
-import Video from '../components/Video/Video.astro';
+import Video from '../components/Videos/Video.astro';
 import Slider from '../components/Slider/Slider.astro';
 
 import arbusto from '/src/assets/img/arbusto.webp';
