--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,9 @@ export interface Props {
 
 const {
 	title = "SCA | especialistas en gestión ambiental empresarial",
-	description = "Descubre por qué dos sitios web nunca cuestan lo mismo, por donde iniciar tu cotización y por qué Juan Palma es tu socio ideal para tu proyecto, escalable y eficiente.",
-	canonicalUrl = "https://sca.cliente.work/",
-	ogImage = "https://idalibre.com/landing-page/sitios-web-juan-palma/assets/img/facebook_web_img_article.jpg",
+	description = "Nuestra prioridad es que cumplas con todas tus obligaciones ambientales sin complicaciones",
+	canonicalUrl = "https://scadser.com.mx/",
+	ogImage = "https://scadser.com.mx/img/facebook_web_img_article.jpg",
 	jsonLd,
 	pageScripts = [],
 } = Astro.props;
