--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -7,6 +7,10 @@ export interface Props {
   jsonLd?: object;
 }
 
+import faviconSvg from "../../public/img/favicon.svg";
+import faviconPng from "../../public/img/favicon.png";
+import faviconApple from "../../public/img/apple-touch-icon.png";
+
 const { title, description, canonicalUrl, ogImage, jsonLd } = Astro.props;
 
 const defaultJsonLd = {
@@ -55,9 +59,9 @@ const safeJsonLd = JSON.stringify(jsonLd || defaultJsonLd).replace(/<\/script>/g
 <link rel="canonical" href={canonicalUrl} />
 
 <!-- Favicon & App Icons -->
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="icon" type="image/png" sizes="64x64" href="/favicon.png" />
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="256x256" />
+<link rel="icon" type="image/svg+xml" href={faviconSvg.src} />
+<link rel="icon" type="image/png" sizes="64x64" href={faviconPng.src} />
+<link rel="apple-touch-icon" href={faviconApple.src} sizes="256x256" />
 
 <!-- Site Map -->
 <link rel="sitemap" href="/sitemap-index.xml" />
