--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -147,7 +147,7 @@ const slidesData = [
 						class="globo globoAzul btn-whatsapp"
 						data-url="https://wa.me/+5215548400059"
 					>
-						Solicita una Auditoria de <br />Cumplimiento Legal <span
+						Solicita una auditoria de <br />cumplimiento legal <span
 							class="bold">SIN COSTO</span
 						>
 					</div>
