--- a/src/components/Hero-servicios.astro
+++ b/src/components/Hero-servicios.astro
@@ -65,10 +65,10 @@ import huella from "/src/assets/img/huella.webp";
 											sistemas ISO de gestión y
 											certificación.
 										</li>
-										<li>SASISOPA</li>
-										<li>SGM</li>
-										<li>ARSH</li>
-										<li>PRE</li>
+										<li>SASISOPA.</li>
+										<li>SGM.</li>
+										<li>ARSH.</li>
+										<li>PRE.</li>
 									</ul>
 								</div>
 							</div>
@@ -90,15 +90,15 @@ import huella from "/src/assets/img/huella.webp";
 									<ul>
 										<li>
 											Cursos diseñados para tus
-											necesidades específicas
+											necesidades específicas.
 										</li>
 										<li>
 											Modalidad presencial, remota o
-											híbrida
+											híbrida.
 										</li>
 										<li>
 											Entrenamiento en SASISOPA, ISO,
-											residuos, riesgo ambiental y más
+											residuos, riesgo ambiental y más.
 										</li>
 									</ul>
 								</div>
@@ -117,13 +117,13 @@ import huella from "/src/assets/img/huella.webp";
 							</div>
 							<div class="tarjeta vuelta">
 								<div class="">
-									<h4>Gestión Ambiental</h4>
+									<h4>Asesoría</h4>
 									<ul>
 										<li>
 											Cuentas con nuestra amplia
 											experiencia para brindarte apoyo,
 											supervisar tus actividades, guiarte
-											sobre la soma de decisiones.
+											sobre la toma de decisiones.
 										</li>
 									</ul>
 								</div>
@@ -156,7 +156,7 @@ import huella from "/src/assets/img/huella.webp";
 						<FadeInOnScroll direccion="abajo" client:visible>+500</FadeInOnScroll>
 					</div>
 					<p class="valor">
-						planes de protocolos de respuestas a emergencias.
+						planes de protocolos de respuestas a emergencias
 					</p>
 				</div>
 				<div class="dato">
