--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,127 +1,125 @@
 ---
 
 ---
-<article class="boxSeccion" id="contacto">
-		<div class="fondoBox">
-			<div class="fondo">
-				<!--<div>
-								<img preload-src="./assets/img/mascara_ondas.svg" alt="Fondo de Ventomaquia" width="120">
-						</div>-->
-			</div>
-		</div>
-		<div class="boxWrap">
-			<div class="capsula">
-				<h3>La solución que esperas<br />comienza con un mensaje</h3>
-				<div class="logoFooter">
-					<figure class="">
-						<picture>
-							<source
-								media="(min-width: 460px)"
-								srcset="/img/logo-minimal.svg"
-							/>
-							<!--<source preload-srcset="./assets/img/huella-400.webp">-->
-							<img
-								src="/img/logo-minimal.svg"
-								alt="Logo SCA"
-								width="120"
-								height="120"
-								loading="lazy"
-								decoding="async"
-							/>
-						</picture>
-					</figure>
-				</div>
-				<div class="boxCols">
-					<div class="col col1">
-						<div
-							class="globo globoAzul btn-whatsapp"
-							data-url="https://wa.me/+5215548400059"
-						>
-							Solicita una Auditoria de <br />Cumplimiento Legal <span
-								class="bold">SIN COSTO</span
+<article class="boxArticle" id="contacto">
+	<div class="contentFx">
+		<div class="referencia">
+			<div class="fondo"></div>
+
+			<div class="boxInfo">
+				<div class="capsula">
+					<h3>La solución que esperas<br />comienza con un mensaje</h3>
+					<div class="logoFooter">
+						<figure class="">
+							<picture>
+								<source
+									media="(min-width: 460px)"
+									srcset="/img/logo-minimal.svg"
+								/>
+								<img
+									src="/img/logo-minimal.svg"
+									alt="Logo SCA"
+									width="120"
+									height="120"
+									loading="lazy"
+									decoding="async"
+								/>
+							</picture>
+						</figure>
+					</div>
+					<div class="boxCols">
+						<div class="col col1">
+							<div
+								class="globo globoAzul btn-whatsapp"
+								data-url="https://wa.me/+5215548400059"
 							>
-						</div>
-					</div>
-					<div class="col col2">
-						<h4>Encuéntranos</h4>
-						<div class="redes">
-							<div class="redesMain">
-								<a
-									href="https://www.facebook.com/SCADSERMX/"
-									target="_blank"
-									rel="nofollow"
-									title="Ir al Facebook"
-									aria-label="Ir al Facebook"
-								>
-									<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
-										<div class="hi-icon hi-icon-mobile">
-											<i class="fa-brands fa-facebook"
-											></i>
-										</div>
-									</div>
-								</a>
-								<a
-									href="https://www.linkedin.com/company/scadser/"
-									target="_blank"
-									rel="nofollow"
-									title="Ir al LinkedIn"
-									aria-label="Ir al LinkedIn"
-								>
-									<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
-										<div class="hi-icon hi-icon-mobile">
-											<i class="fa-brands fa-linkedin"
-											></i>
-										</div>
-									</div>
-								</a>
-								<a
-									href="https://wa.me/+5215548400059"
-									target="_blank"
-									rel="nofollow"
-									title="Iniciar charla por WhatsApp"
-									aria-label="Iniciar charla por WhatsApp"
-								>
-									<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
-										<div class="hi-icon hi-icon-mobile">
-											<i class="fa-brands fa-whatsapp"
-											></i>
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col col3">
-						<div class="contacto">
-							<div class="titulo">Tel:</div>
-							<div class="info">
-								<a
-									href="tel:+5215548400059"
-									target="_blank"
-									rel="nofollow"
-									title="Iniciar Llamada">55.4840.0059</a
+								Solicita una auditoria de <br />cumplimiento legal <span
+									class="bold">SIN COSTO</span
 								>
 							</div>
 						</div>
-						<div class="contacto">
-							<!--<div class="titulo"></div>-->
-							<div class="info">
-								<a
-									href="./"
-									rel="nofollow"
-									title="Enviar un correo"
-									onclick="openMailer(event);"
-									><span
-										>ve<!-- Comment-ida -->ntas&#64;sca<!-- comment-ida -->dser&#46;com&#46;mx</span
-									></a
-								>
+						<div class="col col2">
+							<h4>Encuéntranos</h4>
+							<div class="redes">
+								<div class="redesMain">
+									<a
+										href="https://www.facebook.com/SCADSERMX/"
+										target="_blank"
+										rel="nofollow"
+										title="Ir al Facebook"
+										aria-label="Ir al Facebook"
+									>
+										<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
+											<div class="hi-icon hi-icon-mobile">
+												<i class="fa-brands fa-facebook"
+												></i>
+											</div>
+										</div>
+									</a>
+									<a
+										href="https://www.linkedin.com/company/scadser/"
+										target="_blank"
+										rel="nofollow"
+										title="Ir al LinkedIn"
+										aria-label="Ir al LinkedIn"
+									>
+										<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
+											<div class="hi-icon hi-icon-mobile">
+												<i class="fa-brands fa-linkedin"
+												></i>
+											</div>
+										</div>
+									</a>
+									<a
+										href="https://wa.me/+5215548400059"
+										target="_blank"
+										rel="nofollow"
+										title="Iniciar charla por WhatsApp"
+										aria-label="Iniciar charla por WhatsApp"
+									>
+										<div class="hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1b">
+											<div class="hi-icon hi-icon-mobile">
+												<i class="fa-brands fa-whatsapp"
+												></i>
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col col3">
+							<div class="contacto">
+								<div class="titulo">Tel:</div>
+								<div class="info">
+									<a
+										href="tel:+5215548400059"
+										target="_blank"
+										rel="nofollow"
+										title="Iniciar Llamada">55.4840.0059</a
+									>
+								</div>
+							</div>
+							<div class="contacto">
+								<div class="info">
+									<a
+										href="./"
+										rel="nofollow"
+										title="Enviar un correo"
+										onclick="openMailer(event);"
+										><span
+											>ve<!-- Comment-ida -->ntas&#64;sca<!-- comment-ida -->dser&#46;com&#46;mx</span
+										></a
+									>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</article>
+	</div>
+</article>
+
 <footer>
 
 	<!-- informacion de ID.A libre, la empresa desarrolladora de este sitio web -->
